[gd_scene load_steps=5 format=3 uid="uid://dk0c44ovx1q1n"]

[ext_resource type="Script" path="res://connector.gd" id="1_7h6dw"]
[ext_resource type="PackedScene" uid="uid://bilpjgchhx7ns" path="res://buy/buy_phase.tscn" id="1_diixu"]
[ext_resource type="PackedScene" uid="uid://bdfet3llmdvi8" path="res://combat/battle.tscn" id="2_h1hjm"]
[ext_resource type="Texture2D" uid="uid://bcl1it1455x6u" path="res://buy/ui-sprites/shield_dead.png" id="4_4fhj7"]

[node name="Connector" type="Node3D"]
script = ExtResource("1_7h6dw")

[node name="BuyPhase" parent="." instance=ExtResource("1_diixu")]

[node name="Battle" parent="." instance=ExtResource("2_h1hjm")]
visible = false

[node name="BattleUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EndBattle" type="TextureButton" parent="BattleUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.99
anchor_top = 0.99
anchor_right = 0.99
anchor_bottom = 0.99
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
texture_normal = ExtResource("4_4fhj7")
ignore_texture_size = true
stretch_mode = 0

[connection signal="to_battle" from="BuyPhase" to="." method="_on_buy_phase_to_battle"]
[connection signal="battle_done" from="Battle" to="." method="_on_battle_battle_done"]
[connection signal="button_up" from="BattleUI/EndBattle" to="." method="_on_end_battle_button_up"]
